# test_assignment_tg_bot

./: Dockerfile  bot.py  pyproject.toml
